# qcell

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  conftest.py  justfile  launcher.py  make_pyz.py  pyproject.toml  pyz_main.py  test.qcell
.github/workflows/: release.yml
abax/: __init__.py  _winsandbox_ctypes.py  console_worker.py  macros.py  proclimits.py  restricted.py  sandbox.py  sandbox_linux.py  sandbox_macos.py  sandbox_windows.py  settings.py
abax/core/: arrayfuncs.py  ast_nodes.py  errors.py  evaluator.py  gnumeric_fns.py  gnumeric_math.py  gnumeric_stats.py  parser.py  reffuncs.py  sheet.py  spill.py  tokenizer.py  workbook.py
abax/core/calc/: rpn.py  rpn16.py  ti_engine.py  voyager.py
abax/core/functions/: __init__.py  builtins.py
abax/gui/: main_window.py  mixin_console.py  mixin_macros.py  mixin_palette.py
abax/gui/calc/: ti_faceplate.py
abax/gui/console/: console_bridge.py  pyconsole.py
abax/gui/dialogs/: deps_dialog.py
abax/gui/grid/: grid_view.py
abax/tui/: keys.py  render.py
benchmarks/: profile_qcell.py  rescout.md
docs/: architecture.md  calculators.md  cli.md  configuration.md  data-analysis.md  data-science.md  file-formats.md  formula-reference.md  getting-started.md  gui-guide.md  index.md  licensing.md  macros-and-scripting.md  rf-toolkit.md
macros/: sample.py
qcell/: __init__.py  __main__.py  _runtime.py  app.py  console_worker.py  diagnostics.py  kernel.py  macros.py  recorder.py  settings.py  state.py  tui.py  widget.py  workers.py
qcell/core/: __init__.py  algebraic.py  ansipalette.py  archive.py  arrayfuncs.py  ast_nodes.py  budget.py  cellformat.py  cells.py  cellstyle.py  clipboard.py  colormap.py  completion.py  complexnum.py  condformat.py  console_ns.py  criteria.py  csv_io.py  csv_stream.py  eigen.py  engineering_fns.py  errors.py  evaluator.py  exchange_io.py  faceplate_assets.py  fileops.py  fill.py  finance_fns.py  financial.py  flatfile_io.py  fonts.py  functions.py  goalseek.py  graphing.py  interp.py  latexmath.py  markdown_io.py  math_fns.py  matrix.py  ml.py  (+43 more)
qcell/core/calc/: rpn12.py
qcell/core/functions/: __init__.py  builtins.py  helpers.py  rf.py
qcell/core/io/: __init__.py  csv_io.py  csv_stream.py  exchange_io.py  flatfile_io.py  html_report.py  markdown_io.py  notebook_io.py  r_io.py  sqlite_io.py  urlfetch.py  xml_io.py
qcell/core/science/: __init__.py  antenna.py  antenna_impedance.py  bayes.py  cluster.py  eigen.py  fft.py  filters.py  financial.py  gmm.py  iq.py  metrics.py  ml.py  mom.py  numeric.py  ode.py  ode_implicit.py  regression.py  resynth.py  signal.py  spectral.py  trees.py  units.py
qcell/engine/: __init__.py  analysis.py  document.py  excel_io.py  nbvalidate.py  necpy.py  ods_io.py  parquet_io.py
qcell/gui/: __init__.py  _qtcompat.py  algebraic_faceplate.py  calculator_panel.py  clipboard_dialog.py  command_palette.py  completion.py  condformat_dialog.py  console_bridge.py  dataframe_dialog.py  equation_dialog.py  faceplate.py  filter_dialog.py  find_dialog.py  formula_browser.py  frozen_panes.py  graph_dialog.py  grid_model.py  grid_view.py  icons.py  image_faceplate.py  main_window.py  matrix_dialog.py  mixin_calc.py  mixin_console.py  mixin_document.py  mixin_io.py  mixin_macros.py  mixin_navigation.py  mixin_palette.py  mixin_settings.py  mixin_tools.py  mixin_view.py  ml_dialog.py  name_manager_dialog.py  ode_dialog.py  pivot_dialog.py  ptyterminal.py  pyconsole.py  recode_dialog.py  (+11 more)
qcell/gui/console/: pyconsole.py
qcell/gui/dialogs/: __init__.py  antenna_dialog.py  budget_dialog.py  clipboard_dialog.py  condformat_dialog.py  dataframe_dialog.py  equation_dialog.py  filemanager_dialog.py  filter_dialog.py  find_dialog.py  formula_browser.py  goalseek_dialog.py  graph_dialog.py  matrix_dialog.py  ml_dialog.py  name_manager_dialog.py  ode_dialog.py  pivot_dialog.py  recode_dialog.py  rf_reference_dialog.py  signal_dialog.py  smith_dialog.py  solver_dialog.py  sort_dialog.py  stats_dialog.py  theme_dialog.py  undo_history_dialog.py  validation_dialog.py
qcell/gui/grid/: grid_view.py
qcell/gui/themes/: high_contrast.qss  light.qss  obsidian.qss
tests/: test_algebraic.py  test_analysis.py  test_ansipalette.py  test_antenna.py  test_antenna_impedance.py  test_archive.py  test_arrayfuncs.py  test_arrayfuncs_integration.py  test_bayes.py  test_budget.py  test_cellformat.py  test_cellstyle.py  test_cli_argv.py  test_clipboard.py  test_cluster.py  test_colormap.py  test_completion.py  test_complexnum.py  test_condformat.py  test_console_bridge.py  test_console_ns.py  test_console_worker.py  test_core_csv.py  test_core_formula.py  test_core_functions_extended.py  test_criteria.py  test_cross_sheet.py  test_csv_stream.py  test_dependencies.py  test_distributions.py  test_eigen.py  test_engine_document.py  test_engineering_fns.py  test_faceplate.py  test_faceplate_assets.py  test_fft.py  test_fileops.py  test_fill.py  test_filters.py  test_finance_fns.py  (+107 more)
